--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ blockquote {
 	position: relative;
 	width: 100%;
 	height: 100%;
-	background-image: url(images/TomsLightersLogo.png);
+	background-image: url(images/TomsLIghtersLogo.png);
 	background-color: transparent;
 	background-repeat: no-repeat;
 	background-size: 50%; background-position: 50% 45%}
